syntax = "proto3";

package com.grpc.example;

option java_multiple_files = true;
option java_package = "com.grpc.example.greet.model";
option go_package = "./pb";

message User {
  string firstName = 1;
  optional string middleName = 2;
  optional string lastName = 3;
  optional uint32 age = 4;
}
